# swwstructor

./: .gitignore  Justfile  README.md  cabal.project  flake.nix  swwstructor.cabal
app/: Main.hs
app/Swwstructor/Server/: Admin.hs  App.hs  Loader.hs  SecretStore.hs  Store.hs  Stripe.hs
automation/: README.md  provision.rs  ship.rs  site.rs
demo/: nyt-desktop.html  nyt-phone.html
deploy/: flake.nix
deploy/secrets/: nyt-admin.age  nyt-master.age
docs/: ARCHITECTURE.md
nix/: module.nix  swwstructor.nix
sites/hello/: site.yaml
sites/nyt/: site.json
sites/okashi/: site.json
src/Swwstructor/: Block.hs  Checkout.hs  Content.hs  Edit.hs  Html.hs  Money.hs  Site.hs  Templates.hs  Theme.hs
src/Swwstructor/Adapter/: UAL.hs
src/Swwstructor/Plugins/: Shopify.hs  Stripe.hs
test/: Spec.hs
tools/: SeedSites.hs
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/src/: content.ts  index.ts  preview.ts
ts/test/: preview.test.ts
